[gd_scene load_steps=13 format=3 uid="uid://yn8oeuvpi3qs"]

[ext_resource type="Texture2D" uid="uid://cs1wy20prdnpf" path="res://scenes/turret/turret_v1_base.png" id="1_rmqmx"]
[ext_resource type="Script" uid="uid://dpcntdukm2h2u" path="res://scenes/turret/turret.gd" id="1_xfx51"]
[ext_resource type="PackedScene" uid="uid://cu3bsipy85liq" path="res://scenes/components/health_component.tscn" id="2_m8ak0"]
[ext_resource type="Texture2D" uid="uid://bqeg5bkvlqv8b" path="res://scenes/turret/turret_v1_barrel.png" id="2_xfx51"]
[ext_resource type="PackedScene" uid="uid://vdv3ofj5cs4c" path="res://scenes/components/hurtbox_component.tscn" id="3_ynqyc"]
[ext_resource type="Texture2D" uid="uid://b2jp2hemqtcqx" path="res://scenes/turret/turret_v1_hurtbox.png" id="4_bjbsn"]
[ext_resource type="Texture2D" uid="uid://cyo68q1qcbn26" path="res://scenes/turret/turret_v1_radar.png" id="6_8qs6a"]

[sub_resource type="Animation" id="Animation_8qs6a"]
resource_name = "radar_spin"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/RadarSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.283185307179586]
}

[sub_resource type="Animation" id="Animation_bj70u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/RadarSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d1mul"]
_data = {
&"RESET": SubResource("Animation_bj70u"),
&"radar_spin": SubResource("Animation_8qs6a")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ynqyc"]
radius = 55.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bjbsn"]
radius = 55.0

[node name="Turret" type="CharacterBody2D" groups=["turret"]]
collision_layer = 9
motion_mode = 1
script = ExtResource("1_xfx51")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d1mul")
}
autoplay = "radar_spin"

[node name="HealthComponent" parent="." instance=ExtResource("2_m8ak0")]

[node name="Visuals" type="Node2D" parent="." groups=["visual"]]
scale = Vector2(0.2, 0.2)

[node name="HurtboxSprite2D" type="Sprite2D" parent="Visuals"]
scale = Vector2(0.99999994, 0.99999994)
texture = ExtResource("4_bjbsn")

[node name="BaseSprite" type="Sprite2D" parent="Visuals"]
unique_name_in_owner = true
texture = ExtResource("1_rmqmx")

[node name="RayCast2D" type="RayCast2D" parent="Visuals"]
unique_name_in_owner = true
scale = Vector2(9.999999, 9.999999)
target_position = Vector2(335, 0)
collision_mask = 2

[node name="ReloadTimer" type="Timer" parent="Visuals/RayCast2D"]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="Barrel" type="Node2D" parent="Visuals"]
unique_name_in_owner = true

[node name="BarrelSprite" type="Sprite2D" parent="Visuals/Barrel"]
unique_name_in_owner = true
scale = Vector2(0.99999994, 0.99999994)
texture = ExtResource("2_xfx51")

[node name="BarrelPosition" type="Marker2D" parent="Visuals/Barrel"]
position = Vector2(504.99976, 0)
gizmo_extents = 53.5

[node name="ShellPosition" type="Marker2D" parent="Visuals/Barrel"]

[node name="RadarSprite" type="Sprite2D" parent="Visuals"]
scale = Vector2(0.9999998, 0.9999998)
texture = ExtResource("6_8qs6a")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_ynqyc")]
collision_layer = 0
collision_mask = 4
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
visible = false
shape = SubResource("CircleShape2D_ynqyc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_bjbsn")
